Add Java 8 and 1.16.5 support
Much of the idea for the mod locator on 1.16.5 was taken from Crash Assistant.